syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/techschool/simple_bank/proto_code";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_expired_at = 4;
  google.protobuf.Timestamp created_at = 5;
}
message CreateUserRequest {
  string username = 1;
  string password = 2;
  string full_name = 3;
  string email = 4;
}
message CreateUserResponse {
  User user = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse {
  User user = 1;
  string access_token = 2;
}

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}